# agentic_process_automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  browser_agent.py  config.py  docker-compose.yml  email_listener.py  logger.py  main.py  pyproject.toml
.github/workflows/: build-push.yml
apa/: __main__.py  config.py  listener.py  log.py  orchestrator.py
apa/a2a/: __init__.py
apa/agents/: __init__.py
apa/agents/browser/: __init__.py  agent.py  server.py
apa/mail/: __init__.py  base.py  imap.py  protonmail.py
docker/: agent.Dockerfile  orchestrator.Dockerfile  rabbitmq.conf
docs/: TODO.md  migration_report_claude_sdk_to_ado_agent.md  monitoring-agent-architecture.md  postgres-migration-plan.md  project-report.md  target-architecture.md
k8s/: kind-config.yaml
k8s/argocd/: root.yaml  values.yaml
k8s/argocd/apps/: alloy.yaml  apa.yaml  cnpg-operator.yaml  kube-prometheus.yaml  loki.yaml  postgres.yaml  rabbitmq.yaml
k8s/charts/apa/: Chart.yaml  values.yaml
k8s/charts/rpa/: Chart.yaml  values.yaml
k8s/infra/: alloy-values.yaml  kube-prometheus-values.yaml  loki-values.yaml
mail/: __init__.py  base.py  imap.py  protonmail.py
monitoring/: alert_rules.yml  alertmanager.yml  alloy-config.alloy  loki.yml  prometheus.yml  promtail.yml
services/browser-agent/: Dockerfile  requirements.txt
services/listener/: Dockerfile  requirements.txt
services/migrate/: Dockerfile  reap.py  requirements.txt
services/monitor-agent/: Dockerfile  requirements.txt
services/orchestrator/: Dockerfile  requirements.txt
(+74 files in other folders)
