[project]
name = "agentic-rpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "imapclient>=3.1.0",
    "python-dotenv>=1.2.2",
    "pika>=1.3.0",
    "anthropic>=0.25.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
